--- a/call_me_maybe/pubspec.yaml
+++ b/call_me_maybe/pubspec.yaml
@@ -62,11 +62,15 @@ flutter:
         - asset: assets/fonts/EBGaramond-Regular.ttf
         - asset: assets/fonts/EBGaramond-Bold.ttf
           weight: 600
-    # - family: Trajan Pro
-    #   fonts:
-    #     - asset: fonts/TrajanPro.ttf
-    #     - asset: fonts/TrajanPro_Bold.ttf
-    #       weight: 700
+    - family: Eminenz
+      fonts:
+        - asset: assets/fonts/eminenz.ttf
+    - family: Afternoon
+      fonts:
+        - asset: assets/fonts/Afternoon.ttf
+    - family: Autobus
+      fonts:
+        - asset: assets/fonts/Autobus-bold.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
