--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cloud_firestore: ^0.13.4
   firebase_storage: ^3.1.3
   flutter_speed_dial: ^1.2.5
+  location: ^2.5.3
   image_picker: ^0.6.3+4
   intl: ^0.16.1
 
