--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^2.0.0
   cloud_firestore: ^0.13.4
   firebase_storage: ^3.1.3
   flutter_speed_dial: ^1.2.5
